--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -36,7 +36,7 @@
   .login button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #257edd;
     color: #fff;
     border: none;
     border-radius: 5px;
