settings css updated

--- a/src/Components/Settings.css
+++ b/src/Components/Settings.css
@@ -11,16 +11,19 @@
   background-color: #292936;
   padding: 20px;
   color: #fff;
+  height: 585px;
 }
 
 .left-div ul {
   list-style-type: none;
   padding: 0;
+  text-decoration: none;
 }
 
 .left-div li {
-  padding: 10px 0;
+  padding: 9px 0;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .left-div li:hover {
